# lol1

results/milano/archimboldo/2019-10-25_09-12-28/: options.txt
sphere/: .gitignore  CMakeLists.txt  README.rst  conv-png.gp  conv-png.sh  conv.gp  conv.sh  demParticles.cpd  run_diagnostics.sh  wc.sh
sphere/doc/html/: .buildinfo  cfd.html  dem.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  python_api.html  search.html  searchindex.js  sphere_internals.html
sphere/doc/sphinx/: cfd.rst  conf.py  dem.rst  index.rst  introduction.rst  python_api.rst
sphere/python/: adaptive-grid-shear-test.py  alejandro-init-cons.py  bird.py  capillary-cohesion.py  capillary-cohesion.sh  capillary-cohesion2.py  capillary-cohesion2.sh  channel-wet.py  channel.py  collapse.py  collision.py  consolidation-curve.py  consolidation-curves-continue.sh  consolidation-curves.py  consolidation-curves.sh  continue_sim.py  creep-master.py  cube-init.py  cube-init.sh  diffusivity-c_grad_p=0.01.sh  diffusivity-c_grad_p=0.1.sh  diffusivity-c_grad_p=0.5.sh  diffusivity-c_phi=0.1.sh  diffusivity-c_phi=0.5.sh  diffusivity-results.py  diffusivity-starter.py  diffusivity-test.py  diffusivity-test.sh  diffusivity.py  diffusivity.sh  diffusivity1.py  diffusivity2.py  diffusivity3.py  fluidshear.py  generate-consolidation-scripts-comet.py  generate-rate-state-scripts-comet-rs0.py  generate-rate-state-scripts-comet-rs1.py  generate-rate-state-scripts-comet-rs2.py  halfshear-c=0.1-velfac-cont.sh  halfshear-c=0.1-velfac.sh  (+122 more)
sphere/src/: CMakeLists.txt  cohesion.cuh  constants.cuh  constants.h  contactmodels.cuh  contactsearch.cuh  darcy.cpp  darcy.cuh  datatypes.h  debug.h  device.cu  file_io.cpp  forcechains.cpp  integration.cuh  main.cpp  navierstokes.cpp  navierstokes.cuh  porosity.cpp  raytracer.cuh  sorting.cuh  sphere.cpp  sphere.h  sphere_status.c  utility.cu  version.h
sphere/tests/: CMakeLists.txt  bond_tests.py  cfd_inclined.py  cfd_simple.py  cfd_tests.py  cfd_tests_darcy.py  cfd_tests_darcy_particles.py  cfd_tests_neumann-c_v=0.1.py  cfd_tests_neumann.py  cfd_tests_neumann_darcy.py  contactmodel.py  contactmodel_wall.py  contactmodel_wall_young.py  contactmodel_young.py  dem_cfd_tests.py  fluid_particle_interaction.py  fluid_particle_interaction_darcy.py  highlighttext.py  io_tests.py  io_tests_fluid.py  memcheck_tests.py  porosity_tests.py  pytestutils.py  stokes_law.py
